examples/test/testpolicy2555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2555
  namespace: namespace380
spec:
  podSelector:
    matchLabels:
      key4: value40
      key38: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value40
          key31: value4
      podSelector:
        matchLabels:
          key10: value10
          key35: value12
          key0: value36
